# SeaNos

./: .gitignore  .pyen  README.md  add_nvjit_to_path.sh  config.yaml  config_demo.yaml  main.py  pyproject.toml
artifacts/: lyrics.db
assets/: english_bram.m4a  english_maria.m4a
sandbox/: Create_triplets.ipynb  HF_pipeline.ipynb  XTTS_pipeline.ipynb  create_ttss_set.ipynb  dataset_formatter.ipynb  lyrics_reformatter.ipynb  test_phonemizer.ipynb
scripts/: convert_to_mono.sh  finetune_tts.sh  train_tts.sh  trim_mono.sh  vocoder_tts.sh
src/: lyrics.py  news.py  postprocessing.py  preprocessing.py  speak.py  summarise.py  textmapping.py  train_vae.py  train_vocoder.py  tts.py  utils.py
