[tool.poetry]
name = "seanos"
version = "0.1.0"
description = "end-to-end Irish TTsong"
authors = ["Bram <bramiozo@gmail.com>", "Sean Hannan"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
transformers = "^4.41.0"
torch = "^2.3.0"
torchaudio = "^2.3.0"
python-benedict = "^0.33.2"
python-dotenv = "^1.0.1"
openai = "^1.30.1"
TTS = "0.22.0"
feedparser = "^6.0.11"
newsapi = "^0.1.1"
neon-tts-plugin-coqui = "^0.8.0"
accelerate = "^0.30.1"
speechbrain = "^1.0.0"

[tool.poetry.group.dev.dependencies]
seaborn = "0.13.2"
jupyter = "^1.0.0"
scipy = "^1.10.0"
numpy = "^1.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
