[tool.poetry]
name = "seanos"
version = "0.1.0"
description = "end-to-end Irish TTsong"
authors = ["Bram <bramiozo@gmail.com>", "Sean Hannan"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
transformers = "^4.41.0"
torch = "^2.3.0"
torchaudio = "^2.3.0"
python-benedict = "^0.33.2"
python-dotenv = "^1.0.1"
openai = "^1.30.1"
TTS = "0.22.0"
feedparser = "^6.0.11"
neon-tts-plugin-coqui = "^0.8.0"
accelerate = "^0.30.1"
speechbrain = "^1.0.0"
pydub = "^0.25.1"
newsapi-python = "^0.2.7"
odfpy = "^1.4.1"
tensorboard = "2.11"
tensorflow = "2.11"

[tool.poetry.group.dev.dependencies]
seaborn = "0.13.2"
jupyter = "^1.0.0"
scipy = "^1.10.0"
numpy = "^1.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
